# SMCMAP

./: LICENSE  README.md  build_installer.bat  build_portable.bat  build_portable.sh  smcmap.db  smcmap_installer.iss  start.bat  start.sh
.github/workflows/: RELEASE.yml
agent/: CMakeLists.txt
agent/src/: CacheSimulationEngine.cpp  CacheSimulationEngine.h  MemoryStatsReader.cpp  MemoryStatsReader.h  ProcessMemoryTracker.cpp  ProcessMemoryTracker.h  main.cpp
frontend/: pom.xml  smcmap.db
frontend/src/main/java/: module-info.java.bak
frontend/src/main/java/com/smcmap/: Launcher.java  Main.java
frontend/src/main/java/com/smcmap/model/: ProcessSnapshot.java  SystemSnapshot.java
frontend/src/main/java/com/smcmap/service/: AnalysisPersistenceService.java  SystemStatsService.java
frontend/src/main/java/com/smcmap/ui/: DashboardController.java  JavaBridge.java
frontend/src/main/resources/css/: styles.css
frontend/src/main/resources/fxml/: dashboard.fxml
frontend/src/main/resources/web/: dashboard.html
portable_resources/: SMCMAP.manifest
